# RustExperiments

./: Cargo.toml  build.sh  cargo_cmd
ArbitraryPrecision/: Cargo.toml
ArbitraryPrecision/benches/: benchmark.rs
ArbitraryPrecision/src/: main.rs
AssemblyCheck/: Cargo.toml
AssemblyCheck/src/: main.rs
AudioThreaded/: Cargo.toml
AudioThreaded/src/: main.rs  main_v1.rs
BenchmarkCriterionBiasCheck/benches/: my_benchmark.rs
BenchmarkCriterionSetupComparison/: Cargo.toml
BenchmarkLayoutRandomization/: .gitignore  analyze.py  compile.sh  micro_kernel.c  micro_kernel.cpp  notes.md
BenchmarkSetupComparison/benches/: my_benchmark.rs
Benchmarks/: .gitignore  Cargo.toml
Benchmarks/benches/: basic.rs  custom.rs  float_ops.rs  geo.rs  my_benchmark.rs  utils.rs
Benchmarks/scripts/: plot_intersections.py  plot_signed_area.py
Benchmarks/src/: full_precision.rs  helper.rs  lib.rs  rand_geo.rs  robust_alt.rs
DebugProjects/zip2_no_valid_central_directory/: Cargo.toml
DebugRustAnalyzerUnusedVariableMacro/: Cargo.toml
DebugRustAnalyzerUnusedVariableMacro/src/: lib.rs
DebugRustAnalyzerUnusedVariableMacro/tests/: as_expression.rs  support_empty_braces.rs
FFTBenchmark/: Cargo.toml
FFTBenchmark/benches/: benchmark.rs
FirstSteps/: cargo_cmd
FirstSteps/src/: main.rs
GamepadLinuxNative/: Cargo.toml  main.cpp
GamepadLinuxNative/src/: main.rs
GamepadRollingTrainer/: Cargo.toml
GamepadRollingTrainer/src/: main.rs
GamepadSdl/: Cargo.toml
GamepadSdl/src/: main.rs
GamepadTest/: Cargo.toml
GamepadTest/src/: main.rs
GuiComparison/: Cargo.toml
GuiComparison/cushy/: Cargo.toml  notes.md
GuiComparison/dioxus/: Cargo.toml  Dioxus.toml
GuiComparison/dioxus/basic-slider/: Cargo.toml  Dioxus.toml
GuiComparison/dioxus/basic-slider/src/: main.rs
GuiComparison/dioxus/src/: basic_reactivity.rs  basic_slider.rs  debug_slider.rs  locked_sliders.rs  main.rs
GuiExperiments/: notes.md
GuiExperiments/client_server/wasm-client/: Cargo.toml  index.html  watch_build.sh
GuiExperiments/client_server/wasm-client/src/: lib.rs  utils.rs
GuiExperiments/cushy-debug-snippets/: Cargo.toml
GuiExperiments/cushy-debug-snippets/src/: debug_plotters_expand.rs  debug_progress.rs  debug_progress_v2.rs  main.rs  min_audio_player.rs
GuiExperiments/cushy-rodio/: Cargo.toml
GuiExperiments/cushy-simple-app/: .gitignore  Cargo.toml  env.sh  requirements_dev.in
GuiExperiments/cushy-simple-app/example/: example_1.py
GuiExperiments/cushy-simple-app/python/simple_app/: _simple_app.pyi  core.py  types.py
GuiExperiments/cushy-simple-app/scripts/: venv_install
GuiExperiments/cushy-simple-app/src/: conversion.rs  lib.rs  module.rs  ui.rs
GuiExperiments/dioxus-hello-world-desktop/: Cargo.toml  README.md
GuiExperiments/leptos-hello-world/: Cargo.toml  build.rs  index.html  styles.css
GuiExperiments/leptos-hello-world/src/: async_experiments.rs  main.rs  no_macros.rs  style.rs  svelte_like_styles_via_stylers.rs  timer.rs
GuiExperiments/leptos-wgpu/: Cargo.toml  Trunk.toml  index.html  modern-normalize.css  styles.css
GuiExperiments/leptos-wgpu/src/: app.rs  canvas.rs  components.rs  lib.rs  main.rs  math_utils.rs  resize_observer.rs  svelte_like_styles.rs  utils.rs  web.rs  wgpu_examples.rs  wgpu_render.rs
GuiExperiments/leptos-wgpu/src/shaders/: line.wgsl
GuiExperiments/leptos-wgpu/src/web/: app.rs  canvas.rs  resize_observer.rs  wgpu_examples.rs  wgpu_render.rs
GuiExperiments/tauri-hello-world-v2/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
GuiExperiments/tauri-hello-world-v2/src-tauri/src/: main.rs
GuiExperiments/wgpu-no-eventloop/: .gitignore  Cargo.toml  index.html  notes.md  watch_build.sh
GuiExperiments/wgpu-no-eventloop/src/: lib.rs
JNITest/: Cargo.toml  README.md
MacroAssembleTreePrototype/: Cargo.toml
MacroAssembleTreePrototype/src/: lib.rs
MacroAssembleTreePrototype/tests/: check_expanded.rs  compile_examples.rs  flat.rs  misc.rs  nested4.rs
MacroAssembleTreePrototype/tests/expand/: as_expression.expanded.rs  as_expression.rs  children.expanded.rs  children.rs  flat.expanded.rs  flat.rs  misc.expanded.rs  misc.rs  move_semantics.expanded.rs  move_semantics.rs  nested4.expanded.rs  nested4.rs  support_empty_braces.expanded.rs  support_empty_braces.rs
MacroDebugRustAnalyzerUnusedVariable/: Cargo.toml
MathGLM/: Cargo.toml
PassingAudioBuffers/: Cargo.toml
Playgrounds/: Cargo.toml
SendAndSync/: Cargo.toml
SerdeChecks/: .gitignore  .rustfmt.toml  Cargo.toml  notes.md  test.json
SerdeChecks/fuzz/: .gitignore  Cargo.toml
SerdeChecks/fuzz/fuzz_targets/: deserialize.rs
SerdeChecks/src/: cereal_like.rs  custom_file_format.rs  lib.rs  main.rs  semantics.rs  types.rs
SerdeChecks/src/custom_file_format/: binary_encode.rs  binary_encode_fundamentals.rs  binary_encode_types.rs  deserialize.rs  deserialize_fundamentals.rs  deserialize_types.rs  mod.rs  serialize.rs  serialize_fundamentals.rs  serialize_types.rs  uint.rs  varint.rs
SingletonPatterns/: Cargo.toml
SortedSlotArray/: .gitignore  Cargo.toml
SortedSlotArray/benches/: benchmarks.rs
SortedSlotArray/benchmarks/: Cargo.toml
SortedSlotArray/benchmarks/src/: main.rs  main_simple.rs  slot_array.rs  vec_set.rs
SortedSlotArray/lib/: Cargo.toml
SortedSlotArray/lib/src/: array_stump.rs  lib.rs  main_simple.rs
SortedSlotArray/scripts/: plot.py  plot_stats.py
SortedSlotArray/src/: array_tree.rs  helpers.rs  lib.rs  main.rs  sorted_array.rs  vec_set.rs
ThreadLocalStorage/: Cargo.toml
WebAudio/: .gitignore  Cargo.toml  index.html  index.js  package.json
second_order_expansion/: Cargo.toml  notes.md
simple_app/: .gitignore  Cargo.toml  env.sh  notes.md  pyproject.toml  requirements.txt  requirements_dev.in
simple_app/example/: example_1.py  example_2.py
simple_app/python/simple_app/: __init__.py  _simple_app.pyi  core.py  types.py
simple_app/scripts/: venv_compile_requirements  venv_create  venv_install
simple_app/src/: conversion.rs  lib.rs  module.rs  plotters.rs  ui.rs  ui_inputs.rs  ui_plots.rs
src/: lib.rs  main.rs
torch-tch/: Cargo.toml
(+115 files in other folders)
