[package]
name = "arbitrary_precision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
dashu = "0.3.1"
dashu-ratio = "0.3.2"
fraction = "0.13.1"
num-bigint = "0.4.3"
num-rational = "0.4.1"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
