[package]
name = "Benchmarks"
version = "0.1.0"
authors = ["Fabian Keller <github.100.fkeller@spamgourmet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"
rand = "*"

[[bench]]
name = "basic"
harness = false

# may try:
# https://github.com/BurntSushi/critcmp