[package]
name = "mycrate"
version = "0.1.0"
authors = ["Fabian Keller <github.100.fkeller@spamgourmet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-types = { version = "0.4", default-features = false }
num-traits = "0.2"
robust = "0.1"
float_extras = "*"
rand = "*"
rug = "0.6"
serde_json = { version = "1.0.44", features = ["arbitrary_precision"] }

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1.1"

[[bench]]
name = "geo"
harness = false

# may try:
# https://github.com/BurntSushi/critcmp