[package]
name = "fft_benchmark"
version = "0.1.0"
authors = ["Fabian Keller <github.100.fkeller@spamgourmet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rustfft = "3.0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

