[package]
name = "serde_checks"
version = "0.1.0"
authors = ["Fabian Keller <github.100.fkeller@spamgourmet.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rmp-serde = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
