[package]
name = "serde_checks"
version = "0.1.0"
authors = ["Fabian Keller <github.100.fkeller@spamgourmet.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bincode = "1"
ciborium = "0.2"
flate2 = "1.0"
nom = "7"
num-traits = "0.2"
rmp-serde = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5"
serde_json = "1.0"

[dev-dependencies]

pretty_assertions = "1"
rand = "0.8"
