[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "webaudio"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
]
version = "0.3.77"
