[package]
name = "simple_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simple_app"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"

[tool.maturin]
python-source = "python"
module-name = "my_project._lib_name"