[package]
name = "leptos-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
leptos = "0.2.4"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
]

[build-dependencies]
glob = "0.3.1"
syn = "2.0.15"
regex = "1.7.3"
