[package]
name = "leptos-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-timers = { version = "0.2.6", features = ["futures"] }
lazy_static = "1.4.0"
leptos = "0.2.4"
stylers = "0.3.1"
# leptos = { path = "../../../_ext/leptos/leptos" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
]

[build-dependencies]
glob = "0.3.1"
syn = "2.0.15"
regex = "1.7.3"
