[package]
name = "leptos-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.2.4"
js-sys = "0.3"
stylers = "0.3.1"
wasm-bindgen = "0.2"
wgpu = { version = "0.15", features = ["webgl"]}

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "console",
    "CssStyleDeclaration",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "Node",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "Window",
]
