[package]
name = "wasm-client"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'Element',
  'Headers',
  'HtmlElement',
  'Node',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
